--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "draft-js": "^0.10.5",
     "puid": "^1.0.7",
     "re-base": "2.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-router-dom": "^4.2.2",
+    "react-rte": "^0.16.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
