--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-draft-wysiwyg": "^1.12.13",
+    "react-markdown": "^3.3.0",
     "react-router-dom": "^4.2.2",
     "react-rte": "^0.16.1",
     "react-scripts": "1.1.4"
