--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "draft-js": "^0.10.5",
+    "netlify-identity-widget": "^1.4.11",
     "puid": "^1.0.7",
     "re-base": "2.2.0",
     "react": "^16.3.2",
